test/libsolidity/syntaxTests/array/length/too_large.sol
contract C {
    uint[8**90] ids;
}
// ----
// TypeError: (22-27): Invalid array length, expected integer literal or constant expression.
